# github-pr-notification

./: .gitignore  Makefile  README.md  pyproject.toml  repositories.sample.json  sam.yml  template.yml
scripts/: create_ssm_parameters.py  get_repositories.py  put_repositories.py
src/: index.py
src/logger/: my_logger.py
